...
                    )
                    isPracticeSessionOpen = true
                },
                modifier = Modifier
                    .fillMaxWidth()
                    .height(56.dp)
                    .testTag("QuizButton"),
                colors = ButtonDefaults.buttonColors(containerColor = emeraldAccent),
                shape = RoundedCornerShape(16.dp)
            ) {
                Text(
                    text = "Mulai Kuis Acak",
                    color = Color.White,
...
